--- a/LecturerTrainer/LecturerTrainer.csproj
+++ b/LecturerTrainer/LecturerTrainer.csproj
@@ -297,7 +297,7 @@
     <Compile Include="Model\BodyAnalysis\ArmsWide.cs" />
     <Compile Include="Model\AudioAnalysis\AudioRecorder.cs" />
     <Compile Include="Model\BodyAnalysis\Agitation.cs" />
-    <Compile Include="Model\BodyAnalysis\Class1.cs" />
+    <Compile Include="Model\BodyAnalysis\HypeTraining.cs" />
     <Compile Include="Model\BodyAnalysis\FaceTraining.cs" />
     <Compile Include="Model\BodyAnalysis\SaluteTraining.cs" />
     <Compile Include="Model\BodyAnalysis\WelcomeTraining.cs" />
