Virtual Audience can now be displayed. It reacts to the feedbacks generated by the user and the direction they are facing.

--- a/LecturerTrainer/LecturerTrainer.csproj
+++ b/LecturerTrainer/LecturerTrainer.csproj
@@ -313,6 +313,7 @@
     <Compile Include="Model\Exceptions\XmlLoadingException.cs" />
     <Compile Include="Model\ImageFeedbacksPerso.cs" />
     <Compile Include="Model\PCQueue.cs" />
+    <Compile Include="ViewModel\AudienceMember.cs" />
     <Compile Include="ViewModel\TrainingWithAvatarViewModel.cs" />
     <Compile Include="View\ChoiceDate.xaml.cs">
       <DependentUpon>ChoiceDate.xaml</DependentUpon>
