--- a/LecturerTrainer/packages.config
+++ b/LecturerTrainer/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Accord" version="3.8.0" targetFramework="net45" />
+  <package id="Accord.Extensions.Core" version="3.0.1" targetFramework="net45" />
   <package id="Accord.Math" version="3.8.0" targetFramework="net45" />
   <package id="Accord.Statistics" version="3.8.0" targetFramework="net45" />
   <package id="AForge" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
+  <package id="DotImaging.Primitives2D" version="2.5.3" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net45" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net45" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net45" />
